# teeworlds-gui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
.cache/clangd/index/: BasePage.cpp.6039C39CCB068CCF.idx  BasePage.h.39F1BABB9E0D7291.idx  FriendsPage.cpp.979DC3D649AFEE18.idx  FriendsPage.h.DDE8892895709BFB.idx  HttpManager.cpp.6DF63F585C8A9B61.idx  HttpManager.h.0E7C1C0192727F80.idx  MainPage.cpp.58ECF60274E7CF3C.idx  MainPage.h.6DE0EF11FD9D4B29.idx  PageManager.cpp.75563BCC395E35D7.idx  PageManager.h.FB3330A94630918D.idx  ServerPage.cpp.33B1E47C9D3C8746.idx  ServerPage.h.9AE6CB0CB38693BC.idx  ServerStruct.cpp.DA71573E21ED06DE.idx  ServerStruct.h.5FE50A309CADF183.idx  main.cpp.AD59059DCDCEA607.idx  startup.cpp.B1AEF524B4EAB7B3.idx  startup.h.39505BE1C14339CE.idx
src/: SettingsManager.cpp  SettingsManager.h  main.cpp  utils.cpp  utils.h
src/pages/: BasePage.cpp  BasePage.h  ClientProfile.cpp  ClientProfile.h  FriendsPage.cpp  FriendsPage.h  HttpManager.cpp  HttpManager.h  MainPage.cpp  MainPage.h  PageManager.cpp  PageManager.h  ServerPage.cpp  ServerPage.h  ServerStruct.cpp  ServerStruct.h
src/startup/: startup.cpp  startup.h
